[metadata]
name = bot_cps
version = attr: bot_cps.__version__
author = ster
author_email = ster.physics@gmail.com
description = A program that provides bot managed by bot_cps
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/ster-phys/bot_cps
license = GPL-3.0 License
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiohttp    # Apache-2.0 license <https://github.com/aio-libs/aiohttp>
    compass @ git+https://github.com/ster-phys/compass@master
               # GPL-3.0 license <https://github.com/ster-phys/compass>
    discord.py # MIT license <https://github.com/Rapptz/discord.py>
