[metadata]
name = compass
version = attr: compass.__version__
author = ster
author_email = ster.physics@gmail.com
description = Compass data structures
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/ster-phys/bot_cps
license = GPL-3.0 License
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cryptography        # Apache-2.0 license <https://github.com/pyca/cryptography>
    Levenshtein         # GPL-2.0 license <https://github.com/maxbachmann/python-Levenshtein>
    pillow              # HPND License <https://github.com/python-pillow/Pillow>
    pykakasi            # GPL-3.0 license <https://github.com/miurahr/pykakasi>
    rapidfuzz==2.0.6    # MIT license <https://github.com/maxbachmann/RapidFuzz>
    typing_extensions   # Python Software Foundation License <https://github.com/python/typing_extensions>
